[package]
name = "pi_scene"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene"]

[workspace]
members = ["crates/*"]

[dependencies]


# [[example]]

# [patch.]