[package]
name = "pi_scene_context"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data Control."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene control"]

[dependencies]
approx = "0.5"
pi_slotmap = "0.1"
pi_scene_math = { path = "../pi_scene_math" }
render_data_container = { git = "https://github.com/GaiaWorld/pi_render" }
render_geometry = { git = "https://github.com/GaiaWorld/pi_render" }
render_material = { git = "https://github.com/GaiaWorld/pi_render" }
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation" }

parry3d = "0.13"
lazy_static = "1.4"
pi_spatialtree = { git = "https://github.com/GaiaWorld/pi_spatialtree.git" }
ncollide3d = "0.33"

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../../../pi_animation" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }

# [[example]]
