[package]
name = "pi_scene_geometry"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data Geometry."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["Scene Geometry"]

[dependencies]
nalgebra = "0.30"
pi_share = "0.4"
pi_scene_math = { path = "../pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_share.git"]
pi_share = { path = "../../../pi_share" }

# [[example]]
