[package]
name = "pi_scene_material"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data material."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["Scene material"]

[dependencies]
wgpu = { version = "0.12", features = ["spirv", "glsl"] }
nalgebra = "0.30"
bytemuck = { version = "1.4", features = ["derive"] }
pi_slotmap = "0.1"
pi_scene_data_container = { path = "../pi_scene_data_container" }
pi_scene_math = { path = "../pi_scene_math" }
pi_scene_pipeline_key = { path = "../pi_scene_pipeline_key" }
pi_scene_geometry = { path = "../pi_scene_geometry" }

# [[example]]
