[package]
name = "pi_scene_math"
version = "0.0.3"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene render"]

[dependencies]
approx = "0.5"
nalgebra = "0.32"
pi_animation = {version = "0.1", registry = "yn"}

[patch.yn]
pi_animation = { path = "../../../pi_animation" }

# [[example]]
