[package]
name = "pi_scene_math"
version = "0.0.8"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Math."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene math"]

[features]
default = []
curve_no_nalgebra = []

[dependencies]
approx = "0.5"
nalgebra = { version = "0.32", features = ["convert-glam025"] }
pi_animation = { version = "0.1", registry = "yn" }
pi_curves = { version = "0.1", registry = "yn" }

[patch.yn]
pi_animation = { path = "../../../pi_animation" }
pi_curves = { path = "../../../pi_curves" }

# [[example]]
