[package]
name = "pi_scene_pipeline_key"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene pipeline key"]

[dependencies]
wgpu = { version = "0.12", features = ["spirv", "glsl"] }

# [[example]]
