[package]
name = "pi_scene_render"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene render"]

[dependencies]
wgpu = { version = "0.12", features = ["spirv", "glsl"] }
pi_hash ="0.1"
render_data_container = { git = "https://github.com/GaiaWorld/pi_render" }
render_geometry = { git = "https://github.com/GaiaWorld/pi_render" }
render_material = { git = "https://github.com/GaiaWorld/pi_render" }
render_pipeline_key = { git = "https://github.com/GaiaWorld/pi_render" }
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../../../pi_animation" }

# [[example]]
