[package]
name = "pi_scene_render"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_scene"
license = "MIT OR Apache-2.0"
keywords = ["scene render"]

[dependencies]
wgpu = { version = "0.13", features = ["spirv", "glsl"] }
pi_hash ="0.1"
render_data_container = {varsion = "0.1", registry = "yn"}
render_geometry = {varsion = "0.1", registry = "yn"}
render_material = {varsion = "0.1", registry = "yn"}
render_pipeline_key = {varsion = "0.1", registry = "yn"}
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../../../pi_animation" }

# [[example]]
